Fixed player ID not showing on F6. Move player list to the right.

--- a/resources/vrp/gui/design.css
+++ b/resources/vrp/gui/design.css
@@ -268,7 +268,7 @@ html, body {
   min-width:300px;
   width: auto;
   margin-left:auto;
-  margin-right:auto;
+  margin-right:10px;
   height:auto;
   padding: 20px;
 }
